# kernel_experiments

./: .config  Makefile  NOTES  README.md  hello.c  hello_param.c  meson.build  scull.c  scull_script.sh
drivers/: Makefile  kernel_probes.c  netfilter.c  scull.c  scull.h  simple_module.c
systemtap/: trace_execve.stp  trace_open.stp  trace_prio.stp  trace_socket.stp
userspace/: Makefile  evdev.c  evdev_libudev.c  evdev_libudev_joystick.c  event_dev_info.c  meson.build  scull_user.c  uinput.c  uinput_kb.c
userspace/libinput/: debug_events.c  meson.build
userspace/misc/: caps.c  fs_fat.c  meson.build  netlink_kobject_uevent.c  netlink_route.c  seccomp.c  seccomp_filter.c  syscall_getcpu.c  user.c
userspace/namespaces/: README.md  caps.c  caps_setuid.c  cgexec.sh  chroot.sh  clone.c  clone_caps.c  clone_pidns_proc.c  handle_bridge_netns.sh  handle_netns.sh  helper.h  meson.build  ns_exec.c  ns_user_overflow.c  unshare_uts.c  user.c  uts.c  writable_cgroups.sh
userspace/namespaces/completions/bash/: ns_exec
userspace/uinput/: Makefile  evdev.c  evdev_libudev_joystick.c  hid_dev_info.c  joystick_interface.c  meson.build  uinput_kb.c  uinput_mouse.c  uinput_old_style.c
